# protobuf-json

./: MODULE.bazel  README.md  WORKSPACE  rules_jvm_external~5.2~maven~maven_install.json
src/main/java/protojson/: BUILD.bazel  ProtoToJson.java
src/main/proto/: BUILD.bazel  test.proto
src/test/java/protojson/: BUILD  ProtoToJsonTest.java
src/test/java/protojson/bench/: BUILD  ProtoJsonBenchmark.java
